# cnrtt

./: .gitignore  LICENSE  PKG-INFO  README.md  agent_protocol.md  cnrtt.py  pyproject.toml
.codebuddy/skills/cnrtt/: SKILL.md
.codebuddy/skills/cnrtt/references/: agent_protocol.md
.codebuddy/skills/cnrtt/scripts/: cnrtt_helper.py
scripts/: create_shortcut.ps1  launch_cnrtt.vbs  make_icon.py
src/cnrtt/: __init__.py  agent_client.py  agent_server.py  app.py  cli.py  core.py  watch.py
src/cnrtt.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent_server.py  test_core.py  test_smoke.py  test_watch.py
